🛂 Add a bunch of auth-related improvements

--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -27,8 +27,15 @@
 		.emoji {
 			letter-spacing: 0.125em;
 		}
-		h2 {
+		h1,
+		h2,
+		h3 {
 			text-align: center;
+		}
+		section {
+			background: #09040e;
+			padding: 0.25rem 2rem;
+			border-radius: 1rem;
 		}
 		p {
 			margin: 1.5rem 0;
@@ -71,6 +78,9 @@
 			padding: 0.125rem 0.375rem 0.25rem;
 			margin: 0.125rem 0.125rem -0.25rem;
 			border-radius: 0.5rem;
+		}
+		.warning {
+			color: #e98976;
 		}
 
 		@media (max-width: 33rem) {
