--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -4,8 +4,11 @@
 	<body>
 		<header><h1 class="emoji">🌶️🤖🤙</h1></header>
 		<main>
-			<h2>Spice Bot is ready to rock!</h2>
-			<p>You may now close this page</p>
+			<h2>Spice Bot is almost ready to rock!</h2>
+			<p>
+				Go to your channel and type <code>/mod <%= botUsername %></code> in chat
+			</p>
+			<p><a href="/"></a>View bot status</a></p>
 		</main>
 	</body>
 </html>
