--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,9 +4,20 @@
 	<body>
 		<header><h1>Spice Bot 🌶️</h1></header>
 		<main>
-			<h2>You're all set</h2>
-			<p>Spice Bot is authorized to <code>ybbaaabby</code> on Twitch</p>
+			<% if(username) { %>
+			<p>Spice Bot is authorized to <code><%= username %></code> on Twitch</p>
+			<% if(!botIsMod) { %>
+			<section>
+				<h3 class="warning">Spice Bot is not a moderator in your channel</h3>
+				<p>Go to your channel and type <code>/mod spicebot2</code> in chat</p>
+			</section>
+			<% } %>
 			<p><a href="unlink">Sign out</a></p>
+			<% } else { %>
+			<h2>Let's do this</h2>
+			<p>Use the button below to authorize Spice Bot to your Twitch account!</p>
+			<p><a href="/auth" class="button">Authorize</a></p>
+			<% } %>
 		</main>
 	</body>
 </html>
