🚸 Improve error page, delete session on de-auth

--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -79,6 +79,13 @@
 			margin: 0.125rem 0.125rem -0.25rem;
 			border-radius: 0.5rem;
 		}
+		pre {
+			background: rgba(255, 255, 255, 0.12);
+			padding: 0.25rem 0.5rem 0.375rem;
+			border-radius: 0.5rem;
+			white-space: pre-wrap;
+			word-wrap: break-word;
+		}
 		.warning {
 			color: #e98976;
 		}
