--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -4,9 +4,12 @@
 	<body>
 		<header><h1>Sorry, that didn't work</h1></header>
 		<main>
-			<p>(some error text)</p>
 			<p><a href="auth" class="button">Try Again</a></p>
-			<p>If this keeps happening, please yell at whoever sent you here</p>
+			<p>
+				If this keeps happening, please yell at whoever sent you here, and show
+				them this error text:
+			</p>
+			<p><pre><%= error %></pre></p>
 		</main>
 	</body>
 </html>
