🛂 Improve auth revoke handling, based on method

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,8 +14,8 @@
 			<% } %>
 			<p><a href="unlink">Sign out</a></p>
 			<% } else { %>
-			<h2>Let's do this</h2>
-			<p>Use the button below to authorize Spice Bot to your Twitch account!</p>
+			<h2>Let's get spicy</h2>
+			<p>Use the button below to authorize Spice Bot to your Twitch account</p>
 			<p><a href="/auth" class="button">Authorize</a></p>
 			<% } %>
 		</main>
