--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -8,7 +8,7 @@
 			<p>
 				Go to your channel and type <code>/mod <%= botUsername %></code> in chat
 			</p>
-			<p><a href="/"></a>View bot status</a></p>
+			<p><a href="/">View bot status</a></p>
 		</main>
 	</body>
 </html>
