✨ Add placeholder admin panel

--- a/src/views/wrong-account.ejs
+++ b/src/views/wrong-account.ejs
@@ -6,7 +6,7 @@
 		<main>
 			<h2>You linked the wrong Twitch account</h2>
 			<p><a href="auth" class="button">Try Again</a></p>
-			<p>Make sure you are logged in as <code>ybbaaabby</code></p>
+			<p>Make sure you are logged in as <code><%= streamerUsername %></code></p>
 		</main>
 	</body>
 </html>
