✨ Add account info to admin page, ejs formatting

--- a/src/views/success.ejs
+++ b/src/views/success.ejs
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
-	<%- include('head') %>
-	<body>
-		<header><h1 class="emoji">🌶️🤖🤙</h1></header>
-		<main>
-			<h2>Spice Bot is almost ready to rock!</h2>
-			<p>
-				Go to your channel and type <code>/mod <%= botUsername %></code> in chat
-			</p>
-			<p><a href="/">View bot status</a></p>
-		</main>
-	</body>
+<%- include('head') %>
+
+<body>
+  <header>
+    <h1 class="emoji">🌶️🤖🤙</h1>
+  </header>
+  <main>
+    <h2>Spice Bot is almost ready to rock!</h2>
+    <p>
+      Go to your channel and type <code>/mod <%= botUsername %></code> in chat
+    </p>
+    <p><a href="/">View bot status</a></p>
+  </main>
+</body>
+
 </html>
