--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html>
-	<%- include('head') %>
-	<body>
-		<header><h1>Admin Panel</h1></header>
-		<main>
-			<p>Here's some admin stuff</p>
-		</main>
-	</body>
+<%- include('head') %>
+
+<body>
+  <header>
+    <h1>Admin Panel</h1>
+  </header>
+  <main>
+    <table>
+      <thead>
+        <tr>
+          <th>Account</th>
+          <th>Username</th>
+          <th>Authed</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Streamer</td>
+          <td><code><%= streamer.username %></code></td>
+          <td><%= streamer.authed ?
+						'Yes ✔️' : 'No ❌' %></td>
+        </tr>
+        <tr>
+          <td>Bot</td>
+          <td><code><%= bot.username %></code></td>
+          <td><%= bot.authed ?
+						'Yes ✔️' : 'No ❌' %></td>
+        </tr>
+        <tr>
+          <td>Admin</td>
+          <td><code><%= admin.username %></code></td>
+          <td><%= admin.authed ?
+						'Yes ✔️' : 'No ❌' %></td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+</body>
+
 </html>
