--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -1,99 +1,133 @@
 <head>
-	<title>Spice Bot</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta charset="UTF-8" />
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-		html {
-			background: #221133;
-			color: #eef;
-			font-family: 'Roboto', sans-serif;
-		}
-		body {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			padding: 1rem;
-		}
-		main {
-			background: #15081f;
-			padding: 0 2rem;
-			border-radius: 1rem;
-			max-width: 30rem;
-		}
-		h1 {
-			font-size: 3rem;
-		}
-		.emoji {
-			letter-spacing: 0.125em;
-		}
-		h1,
-		h2,
-		h3 {
-			text-align: center;
-		}
-		section {
-			background: #09040e;
-			padding: 0.25rem 2rem;
-			border-radius: 1rem;
-		}
-		p {
-			margin: 1.5rem 0;
-			font-size: 1rem;
-			text-align: center;
-		}
-		a,
-		a:visited {
-			color: #f03a17;
-			text-decoration: none;
-		}
-		a:hover,
-		a:active {
-			color: #e98976;
-			text-decoration: underline;
-		}
-		a.button,
-		a.button:visited {
-			display: inline-block;
-			color: #eef;
-			font-size: 1.25rem;
-			padding: 1rem;
-			background: #f03a17;
-			border: 3px solid #f03a17;
-			border-radius: 1rem;
-			font-weight: bold;
-			text-decoration: none;
-			transition: all 80ms ease-out;
-		}
-		a.button:hover,
-		a.button:active {
-			background: transparent;
-			border-color: #f03a17;
-			color: #f03a17;
-		}
-		code {
-			background: rgba(255, 255, 255, 0.12);
-			color: #e98976;
-			display: inline-block;
-			padding: 0.125rem 0.375rem 0.25rem;
-			margin: 0.125rem 0.125rem -0.25rem;
-			border-radius: 0.5rem;
-		}
-		pre {
-			background: rgba(255, 255, 255, 0.12);
-			padding: 0.25rem 0.5rem 0.375rem;
-			border-radius: 0.5rem;
-			white-space: pre-wrap;
-			word-wrap: break-word;
-		}
-		.warning {
-			color: #e98976;
-		}
+  <title>Spice Bot</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-		@media (max-width: 33rem) {
-			h1:not(.emoji) {
-				font-size: 2rem;
-			}
-		}
-	</style>
+    html {
+      background: #221133;
+      color: #eef;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    main {
+      background: #15081f;
+      padding: 0 2rem;
+      border-radius: 1rem;
+      max-width: 30rem;
+    }
+
+    h1 {
+      font-size: 3rem;
+    }
+
+    .emoji {
+      letter-spacing: 0.125em;
+    }
+
+    h1,
+    h2,
+    h3 {
+      text-align: center;
+    }
+
+    section {
+      background: #09040e;
+      padding: 0.25rem 2rem;
+      border-radius: 1rem;
+    }
+
+    p {
+      margin: 1.5rem 0;
+      font-size: 1rem;
+      text-align: center;
+    }
+
+    a,
+    a:visited {
+      color: #f03a17;
+      text-decoration: none;
+    }
+
+    a:hover,
+    a:active {
+      color: #e98976;
+      text-decoration: underline;
+    }
+
+    a.button,
+    a.button:visited {
+      display: inline-block;
+      color: #eef;
+      font-size: 1.25rem;
+      padding: 1rem;
+      background: #f03a17;
+      border: 3px solid #f03a17;
+      border-radius: 1rem;
+      font-weight: bold;
+      text-decoration: none;
+      transition: all 80ms ease-out;
+    }
+
+    a.button:hover,
+    a.button:active {
+      background: transparent;
+      border-color: #f03a17;
+      color: #f03a17;
+    }
+
+    code {
+      background: rgba(255, 255, 255, 0.12);
+      color: #e98976;
+      display: inline-block;
+      padding: 0.125rem 0.375rem 0.25rem;
+      margin: 0.125rem 0.125rem -0.25rem;
+      border-radius: 0.5rem;
+    }
+
+    pre {
+      background: rgba(255, 255, 255, 0.12);
+      padding: 0.25rem 0.5rem 0.375rem;
+      border-radius: 0.5rem;
+      white-space: pre-wrap;
+      word-wrap: break-word;
+    }
+
+    .warning {
+      color: #e98976;
+    }
+
+    table {
+      margin: 1rem 0;
+    }
+
+    th {
+      opacity: 0.7;
+      font-weight: 400;
+      text-align: left;
+      padding: 0.5rem;
+    }
+
+    td {
+      padding: 0.25rem 0.5rem;
+    }
+
+    td code {
+      margin: 0;
+    }
+
+    @media (max-width: 33rem) {
+      h1:not(.emoji) {
+        font-size: 2rem;
+      }
+    }
+  </style>
 </head>
