--- a/src/views/wrong-account.ejs
+++ b/src/views/wrong-account.ejs
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-	<%- include('head') %>
-	<body>
-		<header><h1>Oopsie</h1></header>
-		<main>
-			<h2>You linked the wrong Twitch account</h2>
-			<p><a href="auth" class="button">Try Again</a></p>
-			<p>Make sure you are logged in as <code><%= streamerUsername %></code></p>
-		</main>
-	</body>
+<%- include('head') %>
+
+<body>
+  <header>
+    <h1>Oopsie</h1>
+  </header>
+  <main>
+    <h2>You linked the wrong Twitch account</h2>
+    <p><a href="auth" class="button">Try Again</a></p>
+    <p>Make sure you are logged in as <code><%= streamerUsername %></code></p>
+  </main>
+</body>
+
 </html>
