✨ Detect when bot is gifted a sub

--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -22,7 +22,7 @@
       background: #15081f;
       padding: 0 2rem;
       border-radius: 1rem;
-      max-width: 30rem;
+      max-width: 31rem;
     }
 
     h1 {
@@ -68,9 +68,8 @@
       display: inline-block;
       color: #eef;
       font-size: 1.25rem;
-      padding: 1rem;
+      padding: 1.25rem;
       background: #f03a17;
-      border: 3px solid #f03a17;
       border-radius: 1rem;
       font-weight: bold;
       text-decoration: none;
@@ -79,9 +78,7 @@
 
     a.button:hover,
     a.button:active {
-      background: transparent;
-      border-color: #f03a17;
-      color: #f03a17;
+      background: #e98976;
     }
 
     code {
