--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,6 +19,7 @@
     <% } else { %>
     <h2>Let's get spicy</h2>
     <p>Use the button below to authorize Spice Bot to your Twitch account</p>
+    <p>It's easier to do this in a browser that's already logged into Twitch</p>
     <p><a href="/auth" class="button">Authorize</a></p>
     <% } %>
   </main>
