--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -81,6 +81,12 @@
       background: #e98976;
     }
 
+    .button.button-small {
+      font-size: 1rem;
+      padding: 0.75rem;
+      border-radius: 0.75rem;
+    }
+
     code {
       background: rgba(255, 255, 255, 0.12);
       color: #e98976;
@@ -119,6 +125,13 @@
 
     td code {
       margin: 0;
+    }
+
+    .button-row {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
     }
 
     @media (max-width: 33rem) {
