--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -132,6 +132,7 @@
       justify-content: center;
       gap: 1rem;
       flex-wrap: wrap;
+      margin: 1rem 0;
     }
 
     @media (max-width: 33rem) {
