🧑‍💻 Add page preview for dev, tweak some views

--- a/src/views/unlinked.ejs
+++ b/src/views/unlinked.ejs
@@ -8,7 +8,7 @@
   </header>
   <main>
     <p>You have de-authorized Spice Bot from your Twitch account</p>
-    <p><a href="/">Go back</a> to authorize it again</p>
+    <p>You may <a href="/">go back</a> to authorize it again</p>
   </main>
 </body>
 
