--- a/src/views/wrong-account.ejs
+++ b/src/views/wrong-account.ejs
@@ -4,12 +4,12 @@
 
 <body>
   <header>
-    <h1>Oopsie</h1>
+    <h1>Oops...</h1>
   </header>
   <main>
     <h2>You linked the wrong Twitch account</h2>
-    <p><a href="auth" class="button">Try Again</a></p>
     <p>Make sure you are logged in as <code><%= streamerUsername %></code></p>
+    <p><a href="auth" class="button">Try Again</a></p>
   </main>
 </body>
 
