--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -101,7 +101,7 @@
     }
 
     pre {
-      background: rgba(255, 255, 255, 0.12);
+      background: rgba(255, 255, 255, 0.1);
       padding: 0.25rem 0.5rem 0.375rem;
       border-radius: 0.5rem;
       white-space: pre-wrap;
@@ -113,7 +113,7 @@
     }
 
     table {
-      margin: 1rem 0;
+      margin: 1rem auto;
     }
 
     th {
@@ -137,6 +137,11 @@
       gap: 1rem;
       flex-wrap: wrap;
       margin: 1rem 0;
+    }
+
+    summary {
+      text-align: center;
+      cursor: pointer;
     }
 
     @media (max-width: 33rem) {
