--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,6 +15,9 @@
       <p>Go to your channel and type <code>/mod spicebot2</code> in chat</p>
     </section>
     <% } %>
+    <% if(enableOverlay) { %>
+    <p><a href="/overlay-setup">Get your stream overlay URL</a></p>
+    <% } %>
     <p><a href="unlink">Sign out</a></p>
     <% } else { %>
     <h2>Let's get spicy</h2>
