--- a/src/views/head.ejs
+++ b/src/views/head.ejs
@@ -70,7 +70,8 @@
 
     button,
     a.button,
-    a.button:visited {
+    a.button:visited,
+    input[type=submit] {
       display: inline-block;
       color: #eef;
       font-size: 1.25rem;
@@ -81,12 +82,15 @@
       text-decoration: none;
       transition: all 80ms ease-out;
       cursor: pointer;
+      border-style: none;
     }
 
     button:hover,
     button:active,
     a.button:hover,
-    a.button:active {
+    a.button:active,
+    input[type=submit]:hover,
+    input[type=submit]:active {
       background: #e98976;
     }
 
@@ -113,6 +117,15 @@
       padding: 0.125rem 0.375rem 0.25rem;
       margin: 0.125rem 0.125rem -0.25rem;
       border-radius: 0.5rem;
+    }
+
+    form {
+      display: flex;
+      margin: 1rem 0;
+    }
+
+    form input[type=text] {
+      margin: 0 0.5rem 0 0;
     }
 
     pre {
